# elipp

./: .cproject  .gitignore  .project  .travis.yml  CMakeLists.txt  LICENSE  README.md  coding_notes.md  elision.doxyfile
src/: ElisionException.cpp  ElisionException.h  Lazy.h  Loc.cpp  Loc.h  OmitSeq.h  Seq.h  elision.h  util.cpp
src/core/: Lambda.h  List.h  Literal.h  MapPair.h  Term.cpp  Term.h  Variable.h
src/match/: Context.cpp  Context.h  Matcher.cpp  Matcher.h  Result.cpp  Result.h
src/parse/: Parser.cpp  Parser.h
src/term/: Bindings.h  IApply.h  IBinding.h  ILambda.h  IList.h  ILiteral.h  IMapPair.h  IPropertySpecification.h  IPropertySpecificationBuilder.h  ISpecialForm.h  IStaticMap.h  ITerm.cpp  ITerm.h  ITermFactory.h  IVariable.h  Literal.h  PropertySpecification.h  SpecialForm.h  Term.h  TermFactory.h  TermModifier.cpp  TermModifier.h
src/term/basic/: ApplyImpl.cpp  ApplyImpl.h  BasicLiteral.cpp  BasicLiteral.h  BasicTerm.cpp  BasicTerm.h  BindingImpl.cpp  BindingImpl.h  LambdaImpl.cpp  LambdaImpl.h  ListImpl.cpp  ListImpl.h  Literal.cpp  Literal.h  LiteralImpl.cpp  LiteralImpl.h  MapPairImpl.cpp  MapPairImpl.h  PropertySpecificationBuilderImpl.cpp  PropertySpecificationBuilderImpl.h  PropertySpecificationImpl.cpp  PropertySpecificationImpl.h  SpecialFormImpl.cpp  SpecialFormImpl.h  StaticMapImpl.cpp  StaticMapImpl.h  Term.cpp  Term.h  TermFactory.cpp  TermFactory.h  TermFactoryImpl.cpp  TermFactoryImpl.h  TermImpl.cpp  TermImpl.h  VariableImpl.cpp  VariableImpl.h
test/: eint_test  eint_test.cpp  eint_tst  lambda_tst  lambda_tst.cpp  literal_test.cpp  literal_tst  literal_tst.cpp  loc_test.cpp  loc_tst  omit_seq_tst.cpp  run_tests.sh  test_frame.h  test_loc.cpp  variable_tst
tests/: eint_tst.cpp  lambda_tst.cpp  literal_tst.cpp  loc_tst.cpp  omit_seq_tst.cpp  static_map_tst.cpp  variable_tst.cpp
